fixed selection not visible on hover

--- a/src/main/java/com/xresch/cfw/features/core/resources/css/cfw.css
+++ b/src/main/java/com/xresch/cfw/features/core/resources/css/cfw.css
@@ -169,6 +169,12 @@ pre {
     color: #fff;
     background-color: var(--primary)!important; 
 }
+
+/* default selection color is blue, what is not really visible when bg is blue on hover*/
+.table-hover tr:hover ::selection {
+  color: #fff;
+  background: var(--cfw-orange)!important;
+}
  /*************************************************************************
  * Bootstrap overwrite & extensions
  *************************************************************************/
